set up signup & login forms; begin side nav menu & toolbar.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<mat-toolbar (click)="sideNav.toggle()">Red Zone</mat-toolbar>
+<mat-sidenav-container>
+  <mat-sidenav #sideNav role="navigation">Menu</mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
