--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<section>
+  <form 
+    class="login-form" 
+    fxLayout="column" 
+    fxLayoutGap="20px" 
+    fxLayoutAlign="center center" 
+    [formGroup]="loginForm"
+    (ngSubmit)="onSubmit(form)"
+  >
+    <mat-form-field>
+      <input 
+        matInput 
+        email required
+        type="text" 
+        formControlName="email" 
+        placeholder="email"
+      >
+      <mat-hint>{{ loginForm.value.email }}</mat-hint>
+    </mat-form-field>
+  
+    <mat-form-field>
+      <input 
+        matInput 
+        password required
+        type="text" 
+        formControlName="password" 
+        placeholder="password"
+      >
+      <mat-hint></mat-hint>
+    </mat-form-field>
+    <button 
+      mat-raised-button
+      type="submit" 
+      color="primary"
+      [disabled]="loginForm.invalid"
+    >
+      Sign Up
+    </button>
+  </form>
+</section>
