begin welcome view.

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,14 @@
-<p>welcome works!</p>
+<div id="welcome" fxLayout.lt-md="column" fxLayoutAlign="center center">
+  <section>
+    <h1>ACTIVITY</h1>
+    <p>Stay moving</p>
+  </section>
+  <section>
+    <h1>COMMUNITY</h1>
+    <p>Stay in touch</p>
+  </section>
+  <section>
+    <h1>CHALLENGES</h1>
+    <p>Stay ahead</p>
+  </section>
+</div>
