begin new & active session setup.

--- a/src/app/training/active-session/active-session.component.html
+++ b/src/app/training/active-session/active-session.component.html
@@ -1,1 +1,4 @@
-<p>active-session works!</p>
+<section>
+    <mat-progress-bar mode="determinate" [value]="sessionProgress"></mat-progress-bar>
+    <button mat-raised-button (click)="stopStartSession()">Stop</button>
+</section>
