--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,1 +1,11 @@
-<p>training works!</p>
+<mat-tab-group *ngIf="!sessionInProgress">
+  <mat-tab label="New Session">
+    <app-new-session (sessionStarted)="onStartSession()"></app-new-session>
+  </mat-tab>
+
+  <mat-tab label="Past Sessions">
+    <app-past-sessions></app-past-sessions>
+  </mat-tab>
+</mat-tab-group>
+
+<app-active-session *ngIf="sessionInProgress"></app-active-session>
