--- a/src/app/training/new-session/new-session.component.html
+++ b/src/app/training/new-session/new-session.component.html
@@ -5,13 +5,13 @@
       <mat-form-field fxLayoutAlign="center">
         <mat-label>Select an exercise</mat-label>
         <mat-select [(value)]="selected">
-          <mat-option>None</mat-option>
           <mat-option value="option1">Option 1</mat-option>
           <mat-option value="option2">Option 2</mat-option>
           <mat-option value="option3">Option 3</mat-option>
+          <mat-option value="option3">Option 4</mat-option>
         </mat-select>
       </mat-form-field>
-      <p fxLayoutAlign="center">{{selected}}</p>
+      <p fxLayoutAlign="center">{{ selected }}</p>
     </mat-card-content>
     <mat-card-actions fxLayoutAlign="center">
       <button mat-button (click)="startSession()">
