--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -8,4 +8,4 @@
   </mat-tab>
 </mat-tab-group>
 
-<app-active-session *ngIf="sessionInProgress"></app-active-session>
+<app-active-session *ngIf="sessionInProgress" (exitSession)="sessionInProgress = false"></app-active-session>
