--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -7,9 +7,10 @@
   </div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul class="top-nav" fxLayout fxLayoutGap="15px">
-      <li><a routerLink="/signup">signup</a></li>
-      <li><a routerLink="/login">login</a></li>
-      <li><a routerLink="/training">training</a></li>
+      <li *ngIf="!isAuth"><a routerLink="/signup">signup</a></li>
+      <li *ngIf="!isAuth"><a routerLink="/login">login</a></li>
+      <li *ngIf="isAuth"><a routerLink="/training">training</a></li>
+      <li *ngIf="isAuth" (click)="onLogout()"><a routerLink="/">logout</a></li>
     </ul>
   </div>
 </mat-toolbar>
