add basic session tracking & begin set up for firebase.

--- a/src/app/training/new-session/new-session.component.html
+++ b/src/app/training/new-session/new-session.component.html
@@ -1,22 +1,20 @@
 <section fxLayout fxLayoutAlign="center">
-  <mat-card fxFlex.xs="100%" fxFlex="80%">
-    <mat-card-title fxLayoutAlign="center">Create a new session</mat-card-title>
-    <mat-card-content>
-      <mat-form-field fxLayoutAlign="center">
-        <mat-label>Select an exercise</mat-label>
-        <mat-select [(value)]="selected">
-          <mat-option value="option1">Option 1</mat-option>
-          <mat-option value="option2">Option 2</mat-option>
-          <mat-option value="option3">Option 3</mat-option>
-          <mat-option value="option3">Option 4</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <p fxLayoutAlign="center">{{ selected }}</p>
-    </mat-card-content>
-    <mat-card-actions fxLayoutAlign="center">
-      <button mat-button (click)="startSession()">
-        Start
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <form (ngSubmit)="onStartSession(form)" #form="ngForm">
+    <mat-card fxFlex.xs="100%" fxFlex="80%">
+      <mat-card-title fxLayoutAlign="center">Create a new session</mat-card-title>
+      <mat-card-content>
+        <mat-form-field fxLayoutAlign="center">
+          <mat-label>Select an exercise</mat-label>
+          <mat-select ngModel name="exercise" required>
+            <mat-option *ngFor="let exercise of exercises" [value]="exercise">{{ exercise.name }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions fxLayoutAlign="center">
+        <button type="submit" mat-button [disabled]="form.invalid">
+          Start
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </section>
