--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,6 +1,10 @@
   <mat-toolbar color="accent">
   <div id="menu" fxHide.gt-xs>
-    <mat-icon aria-hidden="false" aria-label="Menu icon" (click)="onToggleSidenav()">menu</mat-icon>
+    <mat-icon 
+      aria-hidden="false" 
+      aria-label="Menu icon" 
+      (click)="onToggleSidenav()"
+    >menu</mat-icon>
   </div>
   <div class="logo">
     <a routerLink="/">Red Zone</a>
