--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,13 +5,13 @@
     fxLayoutGap="20px" 
     fxLayoutAlign="center center" 
     [formGroup]="loginForm"
-    (ngSubmit)="onSubmit(form)"
+    (ngSubmit)="onSubmit()"
   >
     <mat-form-field>
       <input 
         matInput 
         email required
-        type="text" 
+        type="email" 
         formControlName="email" 
         placeholder="email"
       >
@@ -22,7 +22,7 @@
       <input 
         matInput 
         password required
-        type="text" 
+        type="password" 
         formControlName="password" 
         placeholder="password"
       >
@@ -33,8 +33,10 @@
       type="submit" 
       color="primary"
       [disabled]="loginForm.invalid"
+      *ngIf='!(isLoading$ | async)'
     >
-      Sign Up
+      Sign In
     </button>
+    <mat-spinner *ngIf='isLoading$'></mat-spinner>
   </form>
 </section>
