--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -37,6 +37,6 @@
     >
       Sign In
     </button>
-    <mat-spinner *ngIf='isLoading$'></mat-spinner>
+    <mat-spinner *ngIf='(isLoading$ | async)'></mat-spinner>
   </form>
 </section>
