implement ngrx redux.

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -11,10 +11,10 @@
   </div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul class="top-nav" fxLayout fxLayoutGap="15px">
-      <li *ngIf="!isAuth"><a routerLink="/signup">signup</a></li>
-      <li *ngIf="!isAuth"><a routerLink="/login">login</a></li>
-      <li *ngIf="isAuth"><a routerLink="/training">training</a></li>
-      <li *ngIf="isAuth" (click)="onLogout()"><a routerLink="/login">logout</a></li>
+      <li *ngIf="!(isAuth$ | async)"><a routerLink="/signup">signup</a></li>
+      <li *ngIf="!(isAuth$ | async)"><a routerLink="/login">login</a></li>
+      <li *ngIf="(isAuth$ | async)"><a routerLink="/training">training</a></li>
+      <li *ngIf="(isAuth$ | async)" (click)="onLogout()"><a routerLink="/login">logout</a></li>
     </ul>
   </div>
 </mat-toolbar>
