--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -44,10 +44,10 @@
       type="submit" 
       color="primary"
       [disabled]="form.invalid"
-      *ngIf='!isLoading'
+      *ngIf='!(isLoading$ | async)'
     >
       Sign Up
     </button>
-    <mat-spinner *ngIf='isLoading'></mat-spinner>
+    <mat-spinner *ngIf='(isLoading$ | async)'></mat-spinner>
   </form>
 </section>
